src/test/ui/regions/regions-reborrow-from-shorter-mut-ref.stderr
error[E0623]: lifetime mismatch
  --> $DIR/regions-reborrow-from-shorter-mut-ref.rs:6:5
   |
LL | fn copy_borrowed_ptr<'a, 'b>(p: &'a mut &'b mut isize) -> &'b mut isize {
   |                                 ---------------------     -------------
   |                                 |
   |                                 this parameter and the return type are declared with different lifetimes...
LL |     &mut **p //~ ERROR lifetime mismatch [E0623]
   |     ^^^^^^^^ ...but data from `p` is returned here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0623`.
